client/src/SASS/ProjectComments.scss
@import './palette';
@import './mixins';

.project-comments {
  width: 100%;
  height: 72vh;
  background-color: #15161a;
  border: 5px solid #15161a;
  box-sizing: border-box;
  border-radius: 10px;
  padding: 14px;
  display: flex;
  flex-flow: column nowrap;
  margin: 0 0 0 1%;
  @include themify($themes) {
    background: themed('bg2');
    border: 5px solid themed('bg2');
  }

  .comments-header {
    letter-spacing: 0.11em;
    font-weight: normal;
    font-size: 1rem;
    margin-bottom: 20px;
  }

  .comments-body {
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    font-size: 0.9rem;
    line-height: 20px;
    display: flex;
    flex-direction: column;
    align-items: flex-end;

    .ProjectComment__body {
      align-items: center;
      background: $blue;
      border-radius: 10px;
      box-sizing: border-box;
      display: flex;
      flex-direction: row-reverse;
      margin-top: 20px;
      padding: 10px 0;
      width: max-content;
      max-width: 100%;
      height: auto;
      &.--you {
        color: white;
      }

      &.--them {
        background: none;
        flex-direction: row;
        align-items: flex-start;
        width: 100%;
        .ProjectComment__body__text {
          text-align: left;
        }
      }

      .user-links {
        text-decoration: none;
        color: white;
      }

      .ProjectComment__body__avatar {
        align-self: baseline;
        border-radius: 100%;
        height: 35px;
        object-fit: cover;
        width: 35px;
        min-width: 35px;
      }

      .ProjectComment__body__text {
        font-size: 12px;
        line-height: 14px;
        letter-spacing: 0.11em;
        padding: 0 8px;
        margin-left: 5px;
        width: max-content;
        max-width: 250px;
        overflow-wrap: break-word;
        text-align: right;

        header {
          display: flex;
        }
        p {
          font-weight: normal;
          margin-top: 2px;
          height: auto;
        }
        .username {
          margin-bottom: 10px;
          font-weight: 900;
        }
      }
    }
  }

  .comments-form {
    padding-top: 20px;
    .form-wrapper {
      align-items: center;
      // border: 1px solid red;
      background: #2a2b31;
      border-radius: 10px;
      display: flex;
      justify-content: space-between;
      padding: 2%;
      @include themify($themes) {
        background: themed('bg');
      }
    }
    input[type='text'] {
      border: none;
      background: #2a2b31;
      border-radius: 10px;
      box-sizing: border-box;
      color: white;
      font-size: 0.8rem;
      font-weight: 400;
      outline: none;
      width: 85%;
      padding: 2%;
      overflow-wrap: break-word;
      max-height: 200px;
      @include themify($themes) {
        background: themed('bg');
        color: themed('text');
      }
    }
    button {
      background-color: #5557fe;
      border: none;
      border-radius: 100%;
      cursor: pointer;
      height: 40px;
      margin-bottom: 2%;
      outline: none;
      width: 40px;
      z-index: 9;
      svg {
        margin: 0 0 -3px -3px;
        text-align: center;
        vertical-align: middle;
      }
      &:hover {
        background: $btn-primary-hover;
      }
    }
  }
}

